fix:overflow

--- a/public/css/passData.css
+++ b/public/css/passData.css
@@ -146,7 +146,7 @@
         display: flex;
         position: absolute;
         top: 22%;
-        width: 100%;
+        width: 50%;
         height: 20%;
         left:50%;
     }
@@ -210,7 +210,7 @@
         display: block;
         position: absolute;
         width: 100%;
-        height: 80%;
+        height: 90%;
         background-color: #FDF9F8;
     }
 
@@ -283,7 +283,7 @@
         display: flex;
         position: absolute;
         top: 20%;
-        width: 100%;
+        width: 45%;
         height: 20%;
         left:55%;
     }
@@ -348,7 +348,7 @@
         display: block;
         position: absolute;
         width: 100%;
-        height: 80%;
+        height: 85%;
         background-color: #FDF9F8;
     }
 
